Fixing spacing

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -364,9 +364,9 @@ img {
     }
     
     .banner-image {
-        background-size: 120% auto;
+        background-size: 130% auto;
         background-repeat: no-repeat;
-        background-position: center 100%;
+        background-position: center 80%;
         
     }
     
